# first_python_project

./: .replit  LICENSE  README.md  app.py  pyproject.toml
templates/: home.html
