[tool.poetry]
name = "repl-nix-firstpythonproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_firstpythonproject"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
